HW/k8s/k8s-netpol/app-cache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-cache
  labels:
    app: app-cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-cache
  template:
    metadata:
      labels:
        app: app-cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - name: "multitool-http"
          containerPort: 8380
        - name: "multitool-https"
          containerPort: 13443
...
