HW/k8s/k8s-netpol/svc-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: app
spec:
  selector:
    app: app-backend
  ports:
    - name: multitool-http
      protocol: TCP
      port: 9001
      targetPort: 8180
...
