HW/k8s/k8s-netpol/svc-cache.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  selector:
    app: app-cache
  ports:
    - name: multitool-http
      protocol: TCP
      port: 9003
      targetPort: 8380
...
