HW/k8s/k8s-netpol/svc-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: app
spec:
  selector:
    app: app-frontend
  ports:
    - name: multitool-http
      protocol: TCP
      port: 9002
      targetPort: 8280
...
